--- a/Readme
+++ b/Readme
@@ -35,10 +35,13 @@ DYYCInterface：framework 提供头文件
 //返回设备id
 - (NSString *)deviceId;
 
-//返回用户id(token?)，未登录请返回nil
+//返回用户token
+- (NSString *)token;
+
+//返回用户id
 - (NSString *)userId;
 
-//返回用户(设备)自选股信息(只需要沪深A股:[600001,000001])
+//返回用户(设备)自选股信息(沪深A股:[600001,000001])
 - (NSArray *)userStockArr;
 
 /*
